# api-cliente-jeitto

./: .dockerignore  .gitignore  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py  start.sh  test.sh
app/: VERSION.txt  app.py  cli.py  config.py  crud.py  db.py
app/models/: __init__.py  cliente.py
app/models/serializer/: cliente.py
app/routes/: __init__.py  cliente.py
migrations/: env.py
migrations/versions/: fbb546c13428_initial.py
tests/: conftest.py  test_api.py
